Responsiveness is fixed
Check and study the code to see where you made errors.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section class="banner">
         <div class="ratio" style="--bs-aspect-ratio: 60%;">
             <video autoplay muted class="z-index = 0">
-                <source src="./images/2846069183.mp4" type="video/mp4">
+                <source src="./images/2846069183.mp4" type="video/mp4" class="img-fluid">
             </video>
             <div class="text-overlay"> 
                 <p class="text-white fs-4 fw-normal position-absolute top-50 start-0 z-index = 1 ms-5 mt-5">Hyde + Hyde Architects </p> <br>
@@ -63,14 +63,14 @@
             <div class="container">
                 <div class="comp-container flex-row d-flex justify-content-space-between align-center  col-12 w-l00">
                     <div class="works-cover w-l00">
-                        <div class="works-img img-fluid  gx-5 p-2 w-100 h-100">
-                            <img src="./images/Works+Cover.jpg" alt="Building" style="height: 100vh; width: 35rem;">
+                        <div class="works-img img-fluid  gx-5 p-2  h-100">
+                            <img src="./images/Works+Cover.jpg" alt="Building" class="img-fluid">
                             <p>- Our obsession, your home</p>
                         </div>
                     </div>
                     <div class="objects w-l00">
-                        <div class="blanket-img img-fluid  gx-5 p-2 h-100 w-l00">
-                            <img src="./images/Blanket.jpg" alt="Black blanket" style="height: 100vh; width: 33rem;">
+                        <div class="blanket-img img-fluid  gx-5 p-2 h-100">
+                            <img src="./images/Blanket.jpg" alt="Black blanket" class="img-fluid">
                             <p>- Beautiful collaborations</p>
                         </div>
                     </div>
@@ -80,28 +80,28 @@
         </section>
         <section class="studio-container">
             <div class="container w-l00">
-                <div class="studio img-fluid w-100">
-                    <img src="./images/Studio.jpg" alt="Opened Book" style="height: 100vh; width: 70rem;">
+                <div class="studio img-fluid">
+                    <img src="./images/Studio.jpg" alt="Opened Book" class="img-fluid">
                     <p class="studio-texts fw-normal">How we work</p>
                 </div>
             </div>
             
         </section>
 
-         <section class="work-container w-100">
+         <section class="work-container">
             <div class="container container-fluid">
-                <div class="works-gallery w-100 d-flex flex-row justify-content-center align-center col-4 col-sm-4">
-                    <div class="mini-item w-100 img-fluid gx-5 p-2">
-                        <img src="./images/001 (1).jpg" alt="Opened book" style="height: 50vh; width: 22rem;">
+                <div class="works-gallery d-flex flex-row justify-content-center align-center col-4 col-sm-4">
+                    <div class="mini-item img-fluid gx-5 p-2">
+                        <img src="./images/001 (1).jpg" alt="Opened book" class="img-fluid">
                         <p>Minimalissimo Selection: Architecture</p>
                     </div>
-                    <div class="sail-item w-100 img-fluid gx-5 p-2">
-                        <img src="./images/001.jpeg"  alt="sketch" style="height: 50vh; width: 22rem;">
+                    <div class="sail-item img-fluid gx-5 p-2">
+                        <img src="./images/001.jpeg"  alt="sketch" class="img-fluid">
                         <p>Sail Loft</p>
                     </div>
     
-                    <div class="lemon-item w-100 img-fluid gx-5 p-2">
-                        <img src="./images/Studio.jpg"  alt="studio" style="height: 50vh; width: 22rem;">
+                    <div class="lemon-item img-fluid gx-5 p-2">
+                        <img src="./images/Studio.jpg"  alt="studio" class="img-fluid">
                         <p>When life gives you lemons...</p>
                     </div> 
                 </div>
@@ -117,14 +117,14 @@
                         <p>Hyde + Hyde work with discerning clients around the world to both conceive and create deeply thoughtful buildings and objects</p>
                     </div>
                     <div class="square img-fluid gx-5 p-3 h-100 w-l00">
-                        <img src="./images/square.jpg" alt="square.jpg" style="width: 20rem; height: 50vh;">
+                        <img src="./images/square.jpg" alt="square.jpg" class="img-fluid">
                     </div>
                     <div class="insight-text gx-5 p-2 w-100 bg-light w-100 fs-6"> 
                         <h4>Insight</h4>
                         <p>Wildness, luxury and authenticity weave throughout our work in the pursuit of an architecture in harmony with nature, its systems and forces</p>
                     </div>
                     <div class="asset img-fluid gx-5 p-3 h-100 w-100">
-                        <img src="./images/image-asset2.jpeg" alt="asset building" style="width: 20rem; height: 50vh;">
+                        <img src="./images/image-asset2.jpeg" alt="asset building" class="img-fluid">
                     </div>
                 </div>  
             </div>
@@ -142,10 +142,10 @@
         </section>
 
         <section class="footer">
-            <div class="container m-5">
+            <div class="container">
                 <div class="d-flex flex-column">
                     <div class="d-flex flex-row justify-content-space-between align-items-center lh-1 fw-lighter gx-5 p-2 col-8">
-                        <div class="cardiff w-100 h-100">
+                        <div class="cardiff w-100 h-100 p-3">
                             <p>Cardiff</p>
                             <p> Hyde + Hyde Architects <br>
                                 Sophia House <br>
@@ -158,7 +158,7 @@
                             </a>
                         </div>
 
-                        <div class="Swansea  w-100 h-100">
+                        <div class="Swansea  w-100 h-100 p-3">
                             <p>Swansea</p>
                             <p> Hyde + Hyde Architects <br>
                                 Royal Buildings <br>
@@ -183,7 +183,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="d-flex flex-row justify-content-space-between align-items-center lh-1 fw-lighter col-8">
+                    <!-- <div class="d-flex flex-row justify-content-space-between align-items-center lh-1 fw-lighter col-8">
                         <div class="Information w-100 h-100 gx-5 p-2 lh-1 ">
                             <p>Information</p>
                             <a href="#"><p>Newsletter</p></a>
@@ -215,7 +215,7 @@
                             <a href="#">Pinterest</a>
                             <a href="#">YouTube</a>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="last-column lh-1 fw-lighter">
                         <p>Site by The Printer’s Son</p>
                         <p>Copyright © 2006–2021.</p>
