--- a/pages/contact.html
+++ b/pages/contact.html
@@ -45,7 +45,7 @@
 
     <section class="banner">
         <div class="contact-banner z-index=0 w-100 img-fluid">
-            <img src="../images/Plunch+Lane+Houses+View+4_1+with-2.jpg" alt="Lane house" style="width:98vw; height:100vh;">
+            <img src="../images/Plunch+Lane+Houses+View+4_1+with-2.jpg" alt="Lane house" class="img-fluid">
         </div>
         <div class="page-title w-100 top-50 start-0 z-index = 1 position-absolute  text-white text-start fs-1 fw-normal">
             <p>Contacts</p>
@@ -55,7 +55,7 @@
     <section class="main">
         <div class="container">
             <div class="twin-div d-flex flex-row justify-content-space-between align-center  w-l00 col-6 col-sm-6 col-md-6 co-lg-6">
-                <div class="left-content d-flex flex-column justify-content-space-between align-center  text-start w-l00 gx-5 p-5">
+                <!-- <div class="left-content d-flex flex-column justify-content-space-between align-center  text-start w-l00 gx-5 p-5">
                     <div class="LC1 fw-normal">
                         <p>Let's work together</p>
                     </div>
@@ -75,18 +75,14 @@
                         <p>Press and publicity enquiries to: <br>
                             press@hydearchitects.com</p>
                     </div>
-                </div>
-                <div class="right-content d-flex flex-column justify-content-space-between align-center w-l00 gx-5 p-5">
+                </div> -->
+                <div class="right-content d-flex flex-column justify-content-space-between align-center w-l00 gx-5  mt-5 p-5 col-12 col-sm-3">
                     <div class="name">
                         <label for="exampleFormControlInput1" class="form-label fw-lighter">Name*</label>
                         <div class="inputfield d-flex flex-row justify-content-space-between align-center">
                             <div class="firstname">
                                 <input type="email" class=" border-bottom border-0" id="exampleFormControlInput1">
-                                <p class="fw-lighter">First Name</p>
-                            </div>
-                            <div class="lastname fw-lighter">
-                                <input type="email" class=" border-bottom border-0" id="exampleFormControlInput1">
-                                 <p>Last Name</p>
+                               
                             </div>
                             
                         </div>
@@ -137,7 +133,7 @@
 
     <section class="banner-2 mb-4">
         <div class="contact-banner z-index=0 w-100 img-fluid position-relative">
-            <img src="../images/20091114_the_storm_0017.jpg" alt="storm" style="width:98vw; height:100vh;">
+            <img src="../images/20091114_the_storm_0017.jpg" alt="storm" class="img-fluid">
         </div>
         <div class="page-title w-100 top-50 start-0 text-center z-index = 1 position-relative fs-3 text-black text-start fs-1 fw-normal">
             <p>We are always interested to hear from exceptionally talented people to join our team</p>
@@ -157,10 +153,10 @@
     </section>
 
     <section class="footer">
-        <div class="container m-5">
+        <div class="container">
             <div class="d-flex flex-column">
                 <div class="d-flex flex-row justify-content-space-between align-items-center lh-1 fw-lighter gx-5 p-2 col-8">
-                    <div class="cardiff w-100 h-100">
+                    <div class="cardiff w-100 h-100 p-3">
                         <p>Cardiff</p>
                         <p> Hyde + Hyde Architects <br>
                             Sophia House <br>
@@ -173,7 +169,7 @@
                         </a>
                     </div>
 
-                    <div class="Swansea  w-100 h-100">
+                    <div class="Swansea  w-100 h-100 p-3">
                         <p>Swansea</p>
                         <p> Hyde + Hyde Architects <br>
                             Royal Buildings <br>
@@ -198,7 +194,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="d-flex flex-row justify-content-space-between align-items-center lh-1 fw-lighter col-8">
+                <!-- <div class="d-flex flex-row justify-content-space-between align-items-center lh-1 fw-lighter col-8">
                     <div class="Information w-100 h-100 gx-5 p-2 lh-1 ">
                         <p>Information</p>
                         <a href="#"><p>Newsletter</p></a>
@@ -230,7 +226,7 @@
                         <a href="#">Pinterest</a>
                         <a href="#">YouTube</a>
                     </div>
-                </div>
+                </div> -->
                 <div class="last-column lh-1 fw-lighter">
                     <p>Site by The Printer’s Son</p>
                     <p>Copyright © 2006–2021.</p>
