--- a/pages/journal.html
+++ b/pages/journal.html
@@ -61,7 +61,7 @@
             <div class="journal-gallery d-flex flex-column justify-content-center align-center w-100 h-100">
                 <div class="bigA d-flex flex-row justify-content-space-between align-center w-100 col-4 col-sm-4 col-md-4 col-lg-4">
                     <div class="sub-big1a img-fluid gx-5 p-2">
-                        <img src="../images/memories.jpg" alt="Stars" style="width:20rem; height:50vh;">
+                        <img src="../images/memories.jpg" alt="Stars" class="img-fluid">
                         <p class="py-3 fs-5 fw-light">Memories of Life</p>
                         <div class="stars-text text-start py-2 fs-6 fw-lighter">
                             <p>When summer is in full force with the sun overhead blazing in a bleached blue sky, we convince ourselves the grey cloud cover and the dark days will never come.</p>
@@ -74,54 +74,54 @@
                             <p>A new book that caught our attention: Minimalissimo Selection is a visual exploration of architecture within the spectrum of minimalism. Jump in for a peek inside along with a short video exploring this new tome.</p>
                         </div>
                     </div>
-                    <div class="sub-big3a img-fluid gx-5 p-2 w-100">
-                        <img src="../images/001.jpeg" alt="Signature" style="width:20rem; height:50vh;">
+                    <!-- <div class="sub-big3a img-fluid gx-5 p-2 w-100">
+                        <img src="../images/001.jpeg" alt="Signature" class="img-fluid">
                         <p class="py-3 fs-5 fw-light">Sail Loft</p>
                         <div class="signature-text text-start py-2 fs-6 fw-lighter">
                             <p>Among other projects our studio is currently working on the designs for a new home in the sheltered port of Milford Haven, UK.</p>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="bigB d-flex flex-row justify-content-space-between align-center w-100 col-4 col-sm-4 col-md-4 col-lg-4">
                     <div class="sub-big1b img-fluid gx-5 p-2 w-100">
-                        <img src="../images/Works+Cover.jpg" alt="Building" style="width:20rem; height:50vh;">
+                        <img src="../images/Works+Cover.jpg" alt="Building" class="img-fluid">
                         <p class="py-3 fs-5 fw-light">When life gives you lemons...</p>
                         <div class="building-text text-start py-2 fs-6 fw-lighter">
                             <p>Embracing the idiom in the above title, we can happily conclude we made lemonade. Soaked through from a day of torrential rain and back in dry clothes from a long day and night photoshoot in Oxford. We completed the exterior catalogue for Quatrefoil House.</p>
                         </div>
                     </div>
                     <div class="sub-big2b img-fluid gx-5 p-2 w-100">
-                        <img src="../images/silverhouse.jpg" alt="Silver house" style="width:20rem; height:50vh;">
+                        <img src="../images/silverhouse.jpg" alt="Silver house" class="img-fluid">
                         <p class="py-3 fs-5 fw-light">Silver House + Triumph Motorbikes</p>
                         <div class="silver-text text-start py-2 fs-6 fw-lighter">
                             <p>We were delighted to see global brand Triumph choose Silver House on the Gower Peninsula as a shoot location to capture the new limited edition motorcycle inspired by the Tiger 900 Rally Pro, which features stunt sequences in ‘No Time To Die.</p>
                         </div>
                     </div>
-                    <div class="sub-big3b img-fluid gx-5 p-2 w-100">
+                    <!-- <div class="sub-big3b img-fluid gx-5 p-2 w-100">
                         <img src="../images/Hyde_and_Hyde_Plinth_House_Journal.jpg" alt="Plinth house" style="width:22rem; height:50vh;">
                         <p class="py-3 fs-5 fw-light">Plinth House - In Process</p>
                         <div class="Plinth-text text-start py-2 fs-6 fw-lighter">
                             <p>Various plinth monoliths complete with specific functions: A plunge pool, a barbecue, stepping stones for gathering and seating cascade up from the beach to terminate in the final plinth - a platform for living, vailed under a suspended timber filagree screen.</p>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="bigC  d-flex flex-row justify-content-space-between align-center w-100 col-4 col-sm-4 col-md-4 col-lg-4">
                     <div class="sub-big1c img-fluid gx-5 p-2 w-100 ">
-                        <img src="../images/remarkable_places_drawing.jpg" alt="Drawing" style="width:20rem; height:50vh;">
+                        <img src="../images/remarkable_places_drawing.jpg" alt="Drawing" class="img-fluid">
                         <p class="py-3  fs-5 fw-light">Remarkable Places</p>
                         <div class="drawing-text text-start py-2 fs-6 fw-lighter">
                             <p>Our team is crafting projects at various stages across the UK. From the border of Scotland, south to Oxford, Somerset and across to the wilds of West Wales. Here we share some thoughts and a photographic record of our team exploring a new project and a truly unique site.</p>    
                         </div>    
                     </div>
                     <div class="sub-big2c img-fluid gx-5 p-2 w-100 text-center">
-                        <img src="../images/10-photo+7.jpg" alt="House on sand" style="width:20rem; height:50vh;">
+                        <img src="../images/10-photo+7.jpg" alt="House on sand" class="img-fluid">
                         <p class="sub-img-text text-start fs-5 py-3 fw-light">Edge House Model</p>
                         <div class="sandy-text text-start py-2 fs-6 fw-lighter">
                             <p>Here we share some thoughts from our studio on the making of Edge House model - a home now complete, precariously positioned near the edge of a sheer granite cliff, on the edge of West Wales UK.</p>
                         </div>
                     </div>
                     <div class="sub-big3c img-fluid gx-5 p-2 w-100 text-center">
-                        <img src="../images/Hyde_and_Hyde_Architects_Golden_Number_drawing.jpg" alt="Golden drawing" style="width:20rem; height:50vh;">
+                        <img src="../images/Hyde_and_Hyde_Architects_Golden_Number_drawing.jpg" alt="Golden drawing" class="img-fluid">
                         <p class="sub-img-text text-start py-3 fs-5 fw-light"> The Natural Order of Things</p>
                         <div class="golden-text py-2 text-start fs-6 fw-lighter">
                             <p>A recent walk in an ancient woodland for a new project inspired us to share a few thoughts on the impact of wildness and geometry in the buildings we make.</p>
@@ -144,10 +144,10 @@
     </section>
 
     <section class="footer">
-        <div class="container m-5">
+        <div class="container">
             <div class="d-flex flex-column">
                 <div class="d-flex flex-row justify-content-space-between align-items-center lh-1 fw-lighter gx-5 p-2 col-8">
-                    <div class="cardiff w-100 h-100">
+                    <div class="cardiff w-100 h-100 p-3">
                         <p>Cardiff</p>
                         <p> Hyde + Hyde Architects <br>
                             Sophia House <br>
@@ -160,7 +160,7 @@
                         </a>
                     </div>
 
-                    <div class="Swansea  w-100 h-100">
+                    <div class="Swansea  w-100 h-100 p-3">
                         <p>Swansea</p>
                         <p> Hyde + Hyde Architects <br>
                             Royal Buildings <br>
@@ -185,7 +185,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="d-flex flex-row justify-content-space-between align-items-center lh-1 fw-lighter col-8">
+                <!-- <div class="d-flex flex-row justify-content-space-between align-items-center lh-1 fw-lighter col-8">
                     <div class="Information w-100 h-100 gx-5 p-2 lh-1 ">
                         <p>Information</p>
                         <a href="#"><p>Newsletter</p></a>
@@ -217,7 +217,7 @@
                         <a href="#">Pinterest</a>
                         <a href="#">YouTube</a>
                     </div>
-                </div>
+                </div> -->
                 <div class="last-column lh-1 fw-lighter">
                     <p>Site by The Printer’s Son</p>
                     <p>Copyright © 2006–2021.</p>
