--- a/pages/works.html
+++ b/pages/works.html
@@ -48,7 +48,7 @@
     <section class="banner">
         <div class="ratio" style="--bs-aspect-ratio: 60%;">
             <video autoplay muted class="z-index = 0">
-                <source src="../images/Hyde + Hyde Architects - Crafting Moments in Time_2.mp4" type="video/mp4">
+                <source src="../images/Hyde + Hyde Architects - Crafting Moments in Time_2.mp4" type="video/mp4" class="img-fluid" />
             </video>
             <div class="text-overlay"> 
                 <p class="text-white fs-4 fw-normal position-absolute top-50 start-0 z-index = 1 ms-5 mt-5">Works </p> <br>
@@ -63,95 +63,95 @@
                 <div class="gallery d-flex flex-column">
                     <div class="row-1 d-flex flex-row justify-content-space-between align-center col-4 col-sm-4 col-md-4 col-lg-4 img-fluid">
                         <div class="img1 w-100 img-fluid  gx-5 px-2">
-                            <img src="../images/hyde-and-hyde-france-house-chaise.jpg" alt="" style="width:20rem; height:50vh;">
+                            <img src="../images/hyde-and-hyde-france-house-chaise.jpg" alt="" class="img-fluid">
                             <p>France House</p>
                         </div>
                         <div class="img2 w-100 img-fluid  gx-5 px-2">
-                            <img src="../images/FIA_Visualisation.jpg" alt="" style="width:20rem; height:50vh;">
+                            <img src="../images/FIA_Visualisation.jpg" alt="" class="img-fluid">
                             <p>Black Mountain Research Centre</p>
                         </div>
                         <div class="img3 w-100 img-fluid  gx-5 px-2">
-                            <img src="../images/01+Invisible+House.jpeg" alt="" style="width:20rem; height:50vh;">
+                            <img src="../images/01+Invisible+House.jpeg" alt="" class="img-fluid">
                             <p>Invisible House</p>
                         </div>
                     </div>
                     <div class="row-2 d-flex flex-row justify-content-space-between align-center col-4 col-sm-4 col-md-4 col-lg-4 ">
                         <div class="img1b img-fluid gx-5 px-2">
-                            <img src="../images/02+Utsuroi+House.jpg" alt=""  style="width:20rem; height:50vh;">
+                            <img src="../images/02+Utsuroi+House.jpg" alt=""  class="img-fluid">
                             <p>Utsuroi House</p>
                         </div>
                         <div class="img2b img-fluid gx-5 px-2">
-                            <img src="../images/03+Equipoise+House.jpg" alt=""  style="width:20rem; height:50vh;">
+                            <img src="../images/03+Equipoise+House.jpg" alt=""  class="img-fluid">
                             <p>Equipoise House</p>
                         </div>
                         <div class="img3b img-fluid gx-5 px-2">
-                            <img src="../images/04+Silver+House.jpg" alt=""  style="width:20rem; height:50vh;">
+                            <img src="../images/04+Silver+House.jpg" alt=""  class="img-fluid">
                             <p>Silver House</p>
                         </div>
                     </div>
                     <div class="row-3 d-flex flex-row justify-content-space-between align-center col-4 col-sm-4 col-md-4 col-lg-4">
                         <div class="img1c img-fluid gx-5 px-2">
-                            <img src="../images/05+Faroe+Island+Housing.jpg" alt="" style="width:20rem; height:50vh;">
+                            <img src="../images/05+Faroe+Island+Housing.jpg" alt="" class="img-fluid">
                             <p>Faroe Island Housing</p>
                         </div>
                         <div class="img2c img-fluid gx-5 px-2">
-                            <img src="../images/06+House+for+a+Photographer.jpg" alt="" style="width:20rem; height:50vh;">
+                            <img src="../images/06+House+for+a+Photographer.jpg" alt="" class="img-fluid">
                             <p>House for a Photographer</p>
                         </div>
                         <div class="img3c img-fluid gx-5 px-2">
-                            <img src="../images/07+Cliff+House.jpg" alt="" style="width:20rem; height:50vh;">
+                            <img src="../images/07+Cliff+House.jpg" alt="" class="img-fluid">
                             <p>Cliff House</p>
                         </div>
                     </div>
                     <div class="row-4 d-flex flex-row justify-content-space-between align-center col-4 col-sm-4 col-md-4 col-lg-4 ">
                         <div class="img1d img-fluid gx-5 px-2">
-                            <img src="../images/08+Petrichor+House.jpg" alt="" style="width:20rem; height:50vh;">
+                            <img src="../images/08+Petrichor+House.jpg" alt="" class="img-fluid">
                             <p>Petrichor House</p>
                         </div>
                         <div class="img2d img-fluid gx-5 px-2">
-                            <img src="../images/09+Quatrefoil+House.jpg" alt="" style="width:20rem; height:50vh;">
+                            <img src="../images/09+Quatrefoil+House.jpg" alt="" class="img-fluid" />
                             <p>Quatrefoil House</p>
                         </div>
                         <div class="img3d img-fluid gx-5 px-2">
-                            <img src="../images/10+Castle+High.jpg" alt="" style="width:20rem; height:50vh;">
+                            <img src="../images/10+Castle+High.jpg" alt="" class="img-fluid" />
                             <p>Castle High</p>
                         </div>
                     </div>
                     <div class="row-5 d-flex flex-row justify-content-space-between align-center col-4 col-sm-4 col-md-4 col-lg-4">
                         <div class="img1e img-fluid gx-5 px-2">
-                            <img src="../images/11+Edge+House.jpeg" alt="" style="width:20rem; height:50vh;">
+                            <img src="../images/11+Edge+House.jpeg" alt="" class="img-fluid">
                             <p>Edge House</p>
                         </div>
                         <div class="img2e img-fluid gx-5 px-2">
-                            <img src="../images/12+Copper+House.jpeg" alt="" style="width:20rem; height:50vh;">
+                            <img src="../images/12+Copper+House.jpeg" alt="" class="img-fluid">
                             <p>Copper House</p>
                         </div>
                         <div class="img3e img-fluid gx-5 px-2">
-                            <img src="../images/13+Wayfarer+House.jpg" alt="" style="width:20rem; height:50vh;">
+                            <img src="../images/13+Wayfarer+House.jpg" alt="" class="img-fluid">
                             <p>Wayfarer House</p>
                         </div>
                     </div>
                     <div class="row-6 d-flex flex-row justify-content-space-between align-center col-4 col-sm-4 col-md-4 col-lg-4 ">
                         <div class="img1f img-fluid gx-5 px-2">
-                            <img src="../images/14+Saw+House.jpg" alt="" style="width:20rem; height:50vh;">
+                            <img src="../images/14+Saw+House.jpg" alt="" class="img-fluid">
                             <p>Saw House</p>
                         </div>
                         <div class="img2f img-fluid gx-5 px-2">
-                            <img src="../images/15+Concrete+House.jpg" alt="" style="width:20rem; height:50vh;">
+                            <img src="../images/15+Concrete+House.jpg" alt="" class="img-fluid">
                             <p>Concrete House</p>
                         </div>
                         <div class="img3f img-fluid gx-5 px-2">
-                            <img src="../images/17+California+House.jpg" alt="" style="width:20rem; height:50vh;">
+                            <img src="../images/17+California+House.jpg" alt="" class="img-fluid">
                             <p>California House</p>
                         </div>
                     </div>
                     <div class="row-7 d-flex flex-row justify-content-space-between align-center col-4 col-sm-4 col-md-4 col-lg-4 ">
                         <div class="img1g img-fluid gx-5 px-2">
-                            <img src="../images/18+Pennard+House.jpg" alt="" style="width:20rem; height:50vh;">
+                            <img src="../images/18+Pennard+House.jpg" alt="" class="img-fluid">
                             <p>Pennard House</p>
                         </div>
                         <div class="img2g img-fluid gx-5 px-2">
-                            <img src="../images/19+Idle+Rocks.jpg" alt="" style="width:20rem; height:50vh;">
+                            <img src="../images/19+Idle+Rocks.jpg" alt="" class="img-fluid">
                             <p>Idle Rocks</p>
                         </div>
                     </div>
@@ -171,10 +171,10 @@
         </section>
 
         <section class="footer">
-            <div class="container m-5">
+            <div class="container">
                 <div class="d-flex flex-column">
                     <div class="d-flex flex-row justify-content-space-between align-items-center lh-1 fw-lighter gx-5 p-2 col-8">
-                        <div class="cardiff w-100 h-100">
+                        <div class="cardiff w-100 h-100 p-3">
                             <p>Cardiff</p>
                             <p> Hyde + Hyde Architects <br>
                                 Sophia House <br>
@@ -187,7 +187,7 @@
                             </a>
                         </div>
 
-                        <div class="Swansea  w-100 h-100">
+                        <div class="Swansea  w-100 h-100 p-3">
                             <p>Swansea</p>
                             <p> Hyde + Hyde Architects <br>
                                 Royal Buildings <br>
@@ -212,7 +212,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="d-flex flex-row justify-content-space-between align-items-center lh-1 fw-lighter col-8">
+                    <!-- <div class="d-flex flex-row justify-content-space-between align-items-center lh-1 fw-lighter">
                         <div class="Information w-100 h-100 gx-5 p-2 lh-1 ">
                             <p>Information</p>
                             <a href="#"><p>Newsletter</p></a>
@@ -244,7 +244,7 @@
                             <a href="#">Pinterest</a>
                             <a href="#">YouTube</a>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="last-column lh-1 fw-lighter">
                         <p>Site by The Printer’s Son</p>
                         <p>Copyright © 2006–2021.</p>
