--- a/pages/films.html
+++ b/pages/films.html
@@ -159,10 +159,10 @@
     </section>
 
     <section class="footer">
-        <div class="container m-5">
+        <div class="container">
             <div class="d-flex flex-column">
                 <div class="d-flex flex-row justify-content-space-between align-items-center lh-1 fw-lighter gx-5 p-2 col-8">
-                    <div class="cardiff w-100 h-100">
+                    <div class="cardiff w-100 h-100 p-3">
                         <p>Cardiff</p>
                         <p> Hyde + Hyde Architects <br>
                             Sophia House <br>
@@ -175,7 +175,7 @@
                         </a>
                     </div>
 
-                    <div class="Swansea  w-100 h-100">
+                    <div class="Swansea  w-100 h-100 p-3">
                         <p>Swansea</p>
                         <p> Hyde + Hyde Architects <br>
                             Royal Buildings <br>
@@ -200,7 +200,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="d-flex flex-row justify-content-space-between align-items-center lh-1 fw-lighter col-8">
+                <!-- <div class="d-flex flex-row justify-content-space-between align-items-center lh-1 fw-lighter col-8">
                     <div class="Information w-100 h-100 gx-5 p-2 lh-1 ">
                         <p>Information</p>
                         <a href="#"><p>Newsletter</p></a>
@@ -232,7 +232,7 @@
                         <a href="#">Pinterest</a>
                         <a href="#">YouTube</a>
                     </div>
-                </div>
+                </div> -->
                 <div class="last-column lh-1 fw-lighter">
                     <p>Site by The Printer’s Son</p>
                     <p>Copyright © 2006–2021.</p>
