--- a/pages/objects.html
+++ b/pages/objects.html
@@ -55,11 +55,11 @@
             <div class="two-columns d-flex flex-column justify-content-center align-center w-100 py-3">
                 <div class="obj-row1 d-flex flex-row justify-content-space-between align-center w-100 col-4 col-lg-4 col-sm-4 col-md-4">
                     <div class="obj3abovea w-100 img-fluid  gx-5 px-2">
-                        <img src="../images/002.jpeg" alt="" style="width:20rem; height:50vh;">
+                        <img src="../images/002.jpeg" alt="" class="img-fluid">
                         <p>01</p>
                     </div>
                     <div class="obj3aboveb w-100 img-fluid  gx-5 px-2">
-                        <img src="../images/Blanket.jpg" alt="" style="width:20rem; height:50vh;">
+                        <img src="../images/Blanket.jpg" alt="" class="img-fluid">
                         <p>02</p>
                     </div>
                     <div class="obj3abovec gx-5 p-2 w-100 bg-light fs-6 fw-lighter text-fill">
@@ -77,7 +77,7 @@
                 </div>
                 <div class="obj-row2 d-flex flex-row justify-content-space-between align-center w-100 col-4 col-lg-4 col-sm-4 col-md-4">
                     <div class="obj3below w-100 img-fluid  gx-5 px-2">
-                        <img src="../images/Table.jpg" alt="Table" style="width:20rem; height:50vh;">
+                        <img src="../images/Table.jpg" alt="Table" class="img-fluid">
                         <p>03. Soon</p>
                     </div>
                     <div class="obj3belowb gx-5 p-2 w-100 bg-light fs-6 fw-lighter text-fill">
@@ -93,7 +93,7 @@
                        </p>
                     </div>
                     <div class="obj3belowc w-100 img-fluid  gx-5 px-2">
-                        <img src="../images/Bench.jpg" alt="Bench" style="width:25rem; height:50vh;">
+                        <img src="../images/Bench.jpg" alt="Bench" class="img-fluid">
                         <p>04.Soon</p>
                     </div>
                 </div>
@@ -114,10 +114,10 @@
     </section>
 
     <section class="footer">
-        <div class="container m-5">
+        <div class="container">
             <div class="d-flex flex-column">
                 <div class="d-flex flex-row justify-content-space-between align-items-center lh-1 fw-lighter gx-5 p-2 col-8">
-                    <div class="cardiff w-100 h-100">
+                    <div class="cardiff w-100 h-100 p-3">
                         <p>Cardiff</p>
                         <p> Hyde + Hyde Architects <br>
                             Sophia House <br>
@@ -130,7 +130,7 @@
                         </a>
                     </div>
 
-                    <div class="Swansea  w-100 h-100">
+                    <div class="Swansea  w-100 h-100 p-3">
                         <p>Swansea</p>
                         <p> Hyde + Hyde Architects <br>
                             Royal Buildings <br>
@@ -155,7 +155,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="d-flex flex-row justify-content-space-between align-items-center lh-1 fw-lighter col-8">
+                <!-- <div class="d-flex flex-row justify-content-space-between align-items-center lh-1 fw-lighter col-8">
                     <div class="Information w-100 h-100 gx-5 p-2 lh-1 ">
                         <p>Information</p>
                         <a href="#"><p>Newsletter</p></a>
@@ -187,7 +187,7 @@
                         <a href="#">Pinterest</a>
                         <a href="#">YouTube</a>
                     </div>
-                </div>
+                </div> -->
                 <div class="last-column lh-1 fw-lighter">
                     <p>Site by The Printer’s Son</p>
                     <p>Copyright © 2006–2021.</p>
